infra/zone2/modules/ec2/ec2.tf
# resource "aws_instance" "web" {
#   ami           = var.aws_ami
#   instance_type = "t3.micro"

#   tags = {
#     Name = "Web"
#   }
# }

resource "aws_instance" "ubuntu" {
  ami           = var.aws_ami
  instance_type = "t3.micro"
  key_name = "udacity"
  for_each   = toset(var.public_subnet_ids)
  subnet_id = each.value
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]

  tags = {
    Name = "Ubuntu-Web"
  }
}

resource "aws_security_group" "ec2_sg" {
  name        = "ec2_sg"
  vpc_id      = var.vpc_id

  ingress {    
    description = "web port"
    from_port   = 80    
    to_port     = 80
    protocol    = "tcp"    
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "ssh port"
    from_port   = 22    
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "monitoring"
    from_port   = 9100    
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2_sg"
  }
}
